ajoute le step size

--- a/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
+++ b/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
@@ -103,7 +103,11 @@
               font: {
                 weight: 'bold',
               },
-            }
+            },
+             ticks: {
+                // forces step size to be 50 units
+                stepSize: 10
+                }
             //type: 'logarithmic',
           },
           x:{
@@ -185,7 +189,11 @@
             font: {
                 weight: 'bold',
               },
-          }
+          },
+             ticks: {
+                // forces step size to be 50 units
+                stepSize: 10
+                }
           //type: 'logarithmic',
         }
       },
@@ -248,7 +256,11 @@
             font: {
                 weight: 'bold',
               },
-          }
+          },
+             ticks: {
+                // forces step size to be 50 units
+                stepSize: 10
+                }
           //type: 'logarithmic',
         }
       },
@@ -338,7 +350,11 @@
             font: {
                 weight: 'bold',
               },
-          }
+          },
+             ticks: {
+                // forces step size to be 50 units
+                stepSize: 10
+                }
           //type: 'logarithmic',
         },
         x:{
