ajoute le max des graphiques

--- a/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
+++ b/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
@@ -107,7 +107,8 @@
              ticks: {
                 // forces step size to be 50 units
                 stepSize: 10
-                }
+                },
+                max: 200
             //type: 'logarithmic',
           },
           x:{
@@ -193,7 +194,8 @@
              ticks: {
                 // forces step size to be 50 units
                 stepSize: 10
-                }
+                },
+                max: 200
           //type: 'logarithmic',
         }
       },
@@ -260,7 +262,8 @@
              ticks: {
                 // forces step size to be 50 units
                 stepSize: 10
-                }
+                },
+                max: 200
           //type: 'logarithmic',
         }
       },
@@ -353,7 +356,7 @@
           },
              ticks: {
                 // forces step size to be 50 units
-                stepSize: 10
+                stepSize: 50
                 }
           //type: 'logarithmic',
         },
