--- a/lib/perceptio_web/components/layouts/root.html.heex
+++ b/lib/perceptio_web/components/layouts/root.html.heex
@@ -8,6 +8,9 @@
       Perceptio
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <!-- MapBox CSS via CDN -->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
     <script src={~p"/js/chart.js"}></script>
